Fix left-container and navbar alignment/padding

--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,11 @@
   display: flex;
   align-items: center;
   position: relative;
-  gap: 20px;
 }
 
 .navbar-logo {
-  padding: 8px 0;
+  /* This adds 30px of space to the right of the logo, pushing the nav links over */
+  padding: 20px 30px 20px 30px;
 }
 
 .navbar-logo img {
@@ -189,6 +189,11 @@
 
 .left-container-main {
   flex-grow: 1;
+}
+
+.left-container-main h2, .left-container-main p {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .left-container-footer {
